# veusz-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: preview.rs
src/: data.rs  export.rs  lib.rs  page.rs  size.rs
src/api1/: cmd.rs  mod.rs
src/style/: line.rs  marker.rs  mod.rs  plot.rs
