[package]
name = "veusz"
version = "0.1.1"
edition = "2021"
authors = ["Michael Watzko <michael.watzko@it-designers.de>"]
description = "Veusz command line and embedding interface (API) for Rust"
keywords = ["veusz", "api", "plot", "graph", "cli"]
categories = ["visualization", "api-bindings"]
repository = "https://github.com/itdesigners/veusz-rs"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = { version = "0.99.17", features = ["from"] }
